--- a/html_css/parte_I/index.html
+++ b/html_css/parte_I/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1 class="titulo-principal">Barbearia Alura</h1>
     </header>
-    <img id="banner" src="banner.jpg" alt="Barbearia Alura" />
+    <img id="banner" src="../assets/imagens/banner.jpg" alt="Barbearia Alura" />
 
     <div class="principal">
       <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
@@ -49,7 +49,11 @@
         <li class="item">Profissionais Qualificados</li>
       </ul>
 
-      <img src="beneficios.jpg" alt="Benefícios" class="imagem-beneficios" />
+      <img
+        src="../assets/imagens/beneficios.jpg"
+        alt="Benefícios"
+        class="imagem-beneficios"
+      />
     </div>
   </body>
 </html>
