:recycle: refactor: refazendo a página Home

--- a/html_css/parte_III/contato.html
+++ b/html_css/parte_III/contato.html
@@ -18,9 +18,9 @@
 
         <nav>
           <ul>
-            <li><a href="../pate_I/index.html">Home</a></li>
-            <li><a href="./produtos.html">Produtos</a></li>
-            <li><a href="../parte_III/contatos.html">Contato</a></li>
+            <li><a href="../parte_I/index.html">Home</a></li>
+            <li><a href="../parte_II/produtos.html">Produtos</a></li>
+            <li><a href="./contato.html">Contato</a></li>
           </ul>
         </nav>
       </div>
