--- a/html_css/parte_I/index.html
+++ b/html_css/parte_I/index.html
@@ -3,6 +3,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbearia Alura</title>
 
     <link rel="stylesheet" href="../assets/css/reset.css" />
@@ -110,7 +111,7 @@
 
         <div class="video">
           <iframe
-            width="560"
+            width="100%"
             height="315"
             src="https://www.youtube.com/embed/wcVVXUV0YUY"
             title="YouTube video player"
