:iphone: feat: add responsibility

--- a/formacao_fornt_end/flexbox/alurinha/index.html
+++ b/formacao_fornt_end/flexbox/alurinha/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/base.css" />
     <link rel="stylesheet" href="./assets/css/layout.css" />
     <link rel="stylesheet" href="./assets/css/flexbox.css" />
+    <link rel="stylesheet" href="./assets/css/mobile.css" />
   </head>
 
   <body>
