--- a/formacao_fornt_end/flexbox/flexbox-project/index.html
+++ b/formacao_fornt_end/flexbox/flexbox-project/index.html
@@ -11,14 +11,24 @@
   </head>
   <body>
     <header class="header">
-      <h1>Título</h1>
+      <h1 class="logo">
+        <a href="./index.html">Título</a>
+      </h1>
 
       <nav class="nav-menu">
         <ul class="menu-list-item">
-          <li class="menu-item">Menu 1</li>
-          <li class="menu-item">Menu 2</li>
-          <li class="menu-item">Menu 3</li>
-          <li class="menu-item">Menu 4</li>
+          <li class="menu-item">
+            <a href="#menu-1">Menu 1 </a>
+          </li>
+          <li class="menu-item">
+            <a href="#menu-2">Menu 2 </a>
+          </li>
+          <li class="menu-item">
+            <a href="#menu-3">Menu 3 </a>
+          </li>
+          <li class="menu-item">
+            <a href="#menu-4">Menu 4 </a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -210,6 +220,8 @@
       </div>
       <div class="flex-item card card-promo">
         <p>card 5</p>
+
+        <p>Este item tem mais conteúdos</p>
 
         <div class="card-images">
           <figure>
@@ -440,6 +452,8 @@
       </div>
       <div class="flex-item card card-promo">
         <p>card 10</p>
+
+        <p>Este item tem mais conteúdos</p>
 
         <div class="card-images">
           <figure>
