:sparkles: feat: add highlights section

--- a/formacao_fornt_end/grid-template/alura-store/index.html
+++ b/formacao_fornt_end/grid-template/alura-store/index.html
@@ -10,10 +10,61 @@
     <link href="./assets/css/normalize.css" rel="stylesheet" />
     <link href="./assets/css/reset.css" rel="stylesheet" />
     <link href="./assets/css/style.css" rel="stylesheet" />
+    <link href="./assets/css/highlights.css" rel="stylesheet" />
   </head>
   <body class="app">
     <header class="header">Cabeçalho</header>
-    <main class="main">Conteúdo</main>
+
+    <main class="main">
+      <section class="highlights">
+        <div class="main__highlights box">
+          <h3 class="title__highlights">Fornite</h3>
+        </div>
+        <div class="secondary__highlights box">
+          <h3 class="title__highlights">PUBG</h3>
+        </div>
+        <div class="secondary__highlights box">
+          <h3 class="title__highlights">Slack</h3>
+        </div>
+        <div class="secondary__highlights box">
+          <h3 class="title__highlights">Whatsapp</h3>
+        </div>
+        <div class="secondary__highlights box">
+          <h3 class="title__highlights">CS: GO</h3>
+        </div>
+        <div class="categories__highlights">
+          <ul class="categories__highlights___list">
+            <li class="categories__highlights___item">
+              <a class="categories__highlights___link" href="#">
+                <i
+                  class="categories__highlights___icone fab fa-buromobelexperte"
+                ></i>
+                Aplicativos populares
+              </a>
+            </li>
+            <li class="categories__highlights___item">
+              <a class="categories__highlights___link" href="#">
+                <i class="fas fa-list-ol"></i>
+                Jogos populares
+              </a>
+            </li>
+            <li class="categories__highlights___item">
+              <a class="categories__highlights___link" href="#">
+                <i class="far fa-star"></i>
+                Em Destaque
+              </a>
+            </li>
+            <li class="categories__highlights___item">
+              <a class="categories__highlights___link" href="#">
+                <i class="far fa-bell"></i>
+                Lançamentos
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
     <footer class="footer">Rodapé</footer>
 
     <script src="./assets/js/fontawesome.all.min.js"></script>
