:sparkles: feat: finish footer component

--- a/formacao_fornt_end/grid-template/alura-store/index.html
+++ b/formacao_fornt_end/grid-template/alura-store/index.html
@@ -113,11 +113,11 @@
                   >
                 </div>
                 <div class="populars__card___description">
-                  Traduzido do inglês - O Slack é um conjunto baseado em nuvem
-                  de ferramentas e serviços proprietários de colaboração em
-                  equipe, fundado por Stewart Butterfield. O Slack começou como
-                  uma ferramenta interna usada por sua empresa, Tiny Speck, no
-                  desenvolvimento do Glitch, um jogo online agora extinto.
+                  O Slack é um conjunto baseado em nuvem de ferramentas e
+                  serviços proprietários de colaboração em equipe, fundado por
+                  Stewart Butterfield. O Slack começou como uma ferramenta
+                  interna usada por sua empresa, Tiny Speck, no desenvolvimento
+                  do Glitch, um jogo online agora extinto.
                 </div>
               </div>
             </div>
@@ -383,11 +383,11 @@
                   >
                 </div>
                 <div class="populars__card___description">
-                  Traduzido do inglês - O Slack é um conjunto baseado em nuvem
-                  de ferramentas e serviços proprietários de colaboração em
-                  equipe, fundado por Stewart Butterfield. O Slack começou como
-                  uma ferramenta interna usada por sua empresa, Tiny Speck, no
-                  desenvolvimento do Glitch, um jogo online agora extinto.
+                  O Slack é um conjunto baseado em nuvem de ferramentas e
+                  serviços proprietários de colaboração em equipe, fundado por
+                  Stewart Butterfield. O Slack começou como uma ferramenta
+                  interna usada por sua empresa, Tiny Speck, no desenvolvimento
+                  do Glitch, um jogo online agora extinto.
                 </div>
               </div>
             </div>
@@ -462,10 +462,10 @@
                   >
                 </div>
                 <div class="populars__card___description">
-                  Traduzido do inglês - Brawl Stars é um jogo multiplayer de
-                  arena e jogos de luta livre, desenvolvido e publicado pela
-                  Supercell. Em 14 de junho de 2017, a Supercell anunciou o jogo
-                  por meio de um vídeo de transmissão ao vivo no YouTube.
+                  Brawl Stars é um jogo multiplayer de arena e jogos de luta
+                  livre, desenvolvido e publicado pela Supercell. Em 14 de junho
+                  de 2017, a Supercell anunciou o jogo por meio de um vídeo de
+                  transmissão ao vivo no YouTube.
                 </div>
               </div>
             </div>
@@ -551,7 +551,9 @@
       </section>
     </main>
 
-    <footer class="footer">Rodapé</footer>
+    <footer class="footer">
+      <p>Todos os direitos reservados &copy;2022</p>
+    </footer>
 
     <script src="./assets/js/fontawesome.all.min.js"></script>
   </body>
