:iphone: feat: layout mobile

--- a/formacao_fornt_end/grid-template/alura-store/index.html
+++ b/formacao_fornt_end/grid-template/alura-store/index.html
@@ -13,6 +13,7 @@
     <link href="./assets/css/menu.css" rel="stylesheet" />
     <link href="./assets/css/highlights.css" rel="stylesheet" />
     <link href="./assets/css/populars.css" rel="stylesheet" />
+    <link href="./assets/css/responsive.css" rel="stylesheet" />
   </head>
   <body class="app">
     <header class="header">
@@ -23,7 +24,7 @@
               <i class="fas fa-home"></i>
               Início
             </a>
-            <a class="menu__link" href="##populars-apps">
+            <a class="menu__link" href="#populars-apps">
               <i class="fas fa-mobile-alt"></i>
               Aplicativos
             </a>
@@ -556,5 +557,6 @@
     </footer>
 
     <script src="./assets/js/fontawesome.all.min.js"></script>
+    <script src="./assets/js/scroll.js"></script>
   </body>
 </html>
