:recycle: refactor:  move headline and container classes to section

--- a/formacao_fornt_end/responsive-layout/apeperia/index.html
+++ b/formacao_fornt_end/responsive-layout/apeperia/index.html
@@ -41,17 +41,19 @@
       </nav>
     </header>
 
-    <main class="headline container">
-      <h1 class="headline__title">Aplicativos Na Medida</h1>
+    <main>
+      <section class="headline container">
+        <h1 class="headline__title">Aplicativos Na Medida</h1>
 
-      <p class="headline__description">
-        Apeperia tem um jeito inovador de comparar e montar aplicativos para
-        pequenas e médias empresas.
-      </p>
+        <p class="headline__description">
+          Apeperia tem um jeito inovador de comparar e montar aplicativos para
+          pequenas e médias empresas.
+        </p>
 
-      <a href="#" class="headline__button button" role="button"
-        >Conheça os planos</a
-      >
+        <a href="#" class="headline__button button" role="button"
+          >Conheça os planos</a
+        >
+      </section>
     </main>
   </body>
 </html>
