:sparkles: feat: create highlights section

--- a/formacao_fornt_end/responsive-layout/apeperia/index.html
+++ b/formacao_fornt_end/responsive-layout/apeperia/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./assets/css/base.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/headline.css" />
+    <link rel="stylesheet" href="./assets/css/highlights.css" />
   </head>
 
   <body>
@@ -52,6 +53,40 @@
 
         <a href="#" class="headline__button button" role="button"
           >Conheça os planos</a
+        >
+      </section>
+
+      <section class="highlights container">
+        <h2 class="highlights__title">Destaques</h2>
+
+        <a href="#">
+          <figure class="highlights__panel">
+            <img
+              src="./assets/images/png/starting-to-create-logo.png"
+              alt="Painel do post sobre criação de logotipo"
+              class="highlights__panel-image"
+            />
+            <figcaption class="highlights__panel-description">
+              Conheça as primeiras etapas para a criação de um logotipo
+            </figcaption>
+          </figure>
+        </a>
+
+        <a href="#">
+          <figure class="highlights__panel">
+            <img
+              src="./assets/images/png/photography-tips.png"
+              alt="Painel do post sobre fotografia com celular"
+              class="highlights__panel-image"
+            />
+            <figcaption class="highlights__panel-description">
+              Veja dicas de como fotografar usando seu celular
+            </figcaption>
+          </figure>
+        </a>
+
+        <a href="#" class="highlights__button button"
+          >Receber destaques por email</a
         >
       </section>
     </main>
