--- a/formacao_fornt_end/responsive-layout/apeperia/index.html
+++ b/formacao_fornt_end/responsive-layout/apeperia/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/headline.css" />
     <link rel="stylesheet" href="./assets/css/highlights.css" />
+    <link rel="stylesheet" href="./assets/css/differentials.css" />
   </head>
 
   <body>
@@ -88,6 +89,37 @@
         <a href="#" class="highlights__button button"
           >Receber destaques por email</a
         >
+      </section>
+
+      <section class="differentials container">
+        <ul class="differentials__list">
+          <li class="differentials__item">
+            <h2 class="differentials__item-title">Tempo</h2>
+
+            <p class="differentials__item-description">
+              Tempo é importante! Trabalhamos em ritmo acelerado, atendendo
+              rigorosamente aos prazos.
+            </p>
+          </li>
+
+          <li class="differentials__item">
+            <h2 class="differentials__item-title">Foco</h2>
+
+            <p class="differentials__item-description">
+              Focamos no empreendimento! Oferecemos serviços de qualidade com
+              preços acessíveis.
+            </p>
+          </li>
+
+          <li class="differentials__item">
+            <h2 class="differentials__item-title">Especialistas</h2>
+
+            <p class="differentials__item-description">
+              Equipe experiente e especializada! Testamos todos os produtos
+              antes do lançamento.
+            </p>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
