--- a/formacao_fornt_end/responsive-layout/apeperia/index.html
+++ b/formacao_fornt_end/responsive-layout/apeperia/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./assets/css/headline.css" />
     <link rel="stylesheet" href="./assets/css/highlights.css" />
     <link rel="stylesheet" href="./assets/css/differentials.css" />
+    <link rel="stylesheet" href="./assets/css/about.css" />
   </head>
 
   <body>
@@ -120,6 +121,71 @@
             </p>
           </li>
         </ul>
+      </section>
+
+      <section class="about container">
+        <div class="about__container">
+          <h2 class="about__container-title">Sobre</h2>
+
+          <p class="about__container-description">
+            Criamos aplicativos personalizados para
+            <strong class="about__container-description--highlight"
+              >todas as pessoas!</strong
+            >
+          </p>
+
+          <p class="about__container-description">
+            A manutenção de um aplicativo não pode ser um custo extra para o
+            cliente, Na Apeperia você assina nosso serviço e a manutenção já
+            está inclusa. Assim, você não se preocupa com manutenção, é tudo por
+            nossa conta.
+          </p>
+
+          <p class="about__container-description">
+            Conte com uma equipe especializada e exclusiva pra projetos
+            incríveis em qualquer plataforma.
+          </p>
+
+          <ul class="about__platforms">
+            <li>
+              <img
+                src="./assets/images/png/mobile-logos/android.png"
+                alt="Ícone do Android"
+              />
+            </li>
+
+            <li>
+              <img
+                src="./assets/images/png/mobile-logos/blackberry.png"
+                alt="Ícone do Blackberry"
+              />
+            </li>
+
+            <li>
+              <img
+                src="./assets/images/png/mobile-logos/apple.png"
+                alt="Ícone da Apple"
+              />
+            </li>
+
+            <li>
+              <img
+                src="./assets/images/png/mobile-logos/windowsphone.png"
+                alt="Ícone da Microsoft"
+              />
+            </li>
+          </ul>
+
+          <p class="about__container-description">
+            Desenvolvemos aplicativos para todas as plataformas.
+          </p>
+        </div>
+
+        <img
+          src="./assets/images/png/about-apeperia.png"
+          alt="Sobre a Apeperia"
+          class="about__image"
+        />
       </section>
     </main>
   </body>
