:sparkles: feat: add icons to differentials items

--- a/formacao_fornt_end/responsive-layout/apeperia/index.html
+++ b/formacao_fornt_end/responsive-layout/apeperia/index.html
@@ -94,7 +94,7 @@
 
       <section class="differentials container">
         <ul class="differentials__list">
-          <li class="differentials__item">
+          <li class="differentials__item differentials__item--time">
             <h2 class="differentials__item-title">Tempo</h2>
 
             <p class="differentials__item-description">
@@ -103,7 +103,7 @@
             </p>
           </li>
 
-          <li class="differentials__item">
+          <li class="differentials__item differentials__item--focus">
             <h2 class="differentials__item-title">Foco</h2>
 
             <p class="differentials__item-description">
@@ -112,7 +112,7 @@
             </p>
           </li>
 
-          <li class="differentials__item">
+          <li class="differentials__item differentials__item--experts">
             <h2 class="differentials__item-title">Especialistas</h2>
 
             <p class="differentials__item-description">
