--- a/formacao_fornt_end/responsive-layout/apeperia/index.html
+++ b/formacao_fornt_end/responsive-layout/apeperia/index.html
@@ -124,27 +124,29 @@
       </section>
 
       <section class="about container">
-        <div class="about__container">
-          <h2 class="about__container-title">Sobre</h2>
+        <div class="about__content">
+          <h2 class="about__content-title">Sobre</h2>
 
-          <p class="about__container-description">
+          <p class="about__content-description">
             Criamos aplicativos personalizados para
-            <strong class="about__container-description--highlight"
+            <strong class="about__content-description--highlight"
               >todas as pessoas!</strong
             >
           </p>
 
-          <p class="about__container-description">
+          <p class="about__content-description">
             A manutenção de um aplicativo não pode ser um custo extra para o
             cliente, Na Apeperia você assina nosso serviço e a manutenção já
             está inclusa. Assim, você não se preocupa com manutenção, é tudo por
             nossa conta.
           </p>
 
-          <p class="about__container-description">
+          <strong
+            class="about__content-description--highlight about__content-description--platform"
+          >
             Conte com uma equipe especializada e exclusiva pra projetos
             incríveis em qualquer plataforma.
-          </p>
+          </strong>
 
           <ul class="about__platforms">
             <li>
@@ -176,7 +178,7 @@
             </li>
           </ul>
 
-          <p class="about__container-description">
+          <p class="about__content-description">
             Desenvolvemos aplicativos para todas as plataformas.
           </p>
         </div>
