:sparkles: feat: create plans section

--- a/formacao_fornt_end/responsive-layout/apeperia/index.html
+++ b/formacao_fornt_end/responsive-layout/apeperia/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./assets/css/highlights.css" />
     <link rel="stylesheet" href="./assets/css/differentials.css" />
     <link rel="stylesheet" href="./assets/css/about.css" />
+    <link rel="stylesheet" href="./assets/css/plans.css" />
   </head>
 
   <body>
@@ -59,7 +60,7 @@
       </section>
 
       <section class="highlights container">
-        <h2 class="highlights__title">Destaques</h2>
+        <h2 class="title">Destaques</h2>
 
         <a href="#">
           <figure class="highlights__panel">
@@ -95,7 +96,7 @@
       <section class="differentials container">
         <ul class="differentials__list">
           <li class="differentials__item differentials__item--time">
-            <h2 class="differentials__item-title">Tempo</h2>
+            <h2 class="differentials__item-title title">Tempo</h2>
 
             <p class="differentials__item-description">
               Tempo é importante! Trabalhamos em ritmo acelerado, atendendo
@@ -104,7 +105,7 @@
           </li>
 
           <li class="differentials__item differentials__item--focus">
-            <h2 class="differentials__item-title">Foco</h2>
+            <h2 class="differentials__item-title title">Foco</h2>
 
             <p class="differentials__item-description">
               Focamos no empreendimento! Oferecemos serviços de qualidade com
@@ -113,7 +114,7 @@
           </li>
 
           <li class="differentials__item differentials__item--experts">
-            <h2 class="differentials__item-title">Especialistas</h2>
+            <h2 class="differentials__item-title title">Especialistas</h2>
 
             <p class="differentials__item-description">
               Equipe experiente e especializada! Testamos todos os produtos
@@ -125,7 +126,7 @@
 
       <section class="about container">
         <div class="about__content">
-          <h2 class="about__content-title">Sobre</h2>
+          <h2 class="title">Sobre</h2>
 
           <p class="about__content-description">
             Criamos aplicativos personalizados para
@@ -188,6 +189,88 @@
           alt="Sobre a Apeperia"
           class="about__image"
         />
+      </section>
+
+      <section class="plans container">
+        <h2 class="title">Planos</h2>
+
+        <ul class="plans__cards">
+          <li class="plans__card plans__card--start">
+            <h3 class="plans__card__title">Start</h3>
+
+            <article class="plans__card__content">
+              <p class="plans__card__content__price"><em>R$ 500</em></p>
+
+              <p class="plans__card__content__description">
+                5 manutenções mensais
+              </p>
+
+              <p class="plans__card__content__description">App SEO</p>
+
+              <p class="plans__card__content__description">
+                1 sistema operacional
+              </p>
+
+              <a
+                href="#"
+                class="plans__card__content__button plans__card__content__button--start button"
+                >Assinar plano</a
+              >
+            </article>
+          </li>
+
+          <li class="plans__card plans__card--ultra">
+            <h3 class="plans__card__title">Ultra</h3>
+
+            <article class="plans__card__content">
+              <p class="plans__card__content__price"><em>R$ 1500</em></p>
+
+              <p class="plans__card__content__description">
+                20 manutenções mensais
+              </p>
+
+              <p class="plans__card__content__description">App SEO</p>
+
+              <p class="plans__card__content__description">
+                4 sistemas operacionais
+              </p>
+
+              <p class="plans__card__content__description">
+                24h de atendimento
+              </p>
+
+              <a
+                href="plano.html"
+                class="plans__card__content__button plans__card__content__button--ultra button"
+                >Assinar plano</a
+              >
+            </article>
+          </li>
+
+          <li class="plans__card plans__card--mega">
+            <h3 class="plans__card__title">Mega</h3>
+
+            <article class="plans__card__content">
+              <p class="plans__card__content__price"><em>R$ 1000</em></p>
+
+              <p class="plans__card__content__description">
+                10 manutenções mensais
+              </p>
+
+              <p class="plans__card__content__description">App SEO</p>
+
+              <p class="plans__card__content__description">
+                2 sistemas operacionais
+              </p>
+
+              <a
+                href="plano.html"
+                class="plans__card__content__button plans__card__content__button--mega button"
+                >Assinar plano</a
+              >
+            </article>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
