:sparkles: feat: create contact section

--- a/formacao_fornt_end/responsive-layout/apeperia/index.html
+++ b/formacao_fornt_end/responsive-layout/apeperia/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./assets/css/differentials.css" />
     <link rel="stylesheet" href="./assets/css/about.css" />
     <link rel="stylesheet" href="./assets/css/plans.css" />
+    <link rel="stylesheet" href="./assets/css/contact.css" />
   </head>
 
   <body>
@@ -271,6 +272,14 @@
             </article>
           </li>
         </ul>
+      </section>
+
+      <section class="contact container">
+        <h2 class="title">Contato</h2>
+
+        <p>Entre em contato com a gente</p>
+
+        <a href="#" class="contact__button button">Entre em contato</a>
       </section>
     </main>
   </body>
