:sparkles: feat: create institutional section

--- a/formacao_fornt_end/responsive-layout/apeperia/index.html
+++ b/formacao_fornt_end/responsive-layout/apeperia/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./assets/css/about.css" />
     <link rel="stylesheet" href="./assets/css/plans.css" />
     <link rel="stylesheet" href="./assets/css/contact.css" />
+    <link rel="stylesheet" href="./assets/css/institutional.css" />
   </head>
 
   <body>
@@ -280,6 +281,38 @@
         <p>Entre em contato com a gente</p>
 
         <a href="#" class="contact__button button">Entre em contato</a>
+      </section>
+
+      <section class="institutional container">
+        <h2 class="title">Institucional</h2>
+
+        <p class="institutional__description">Um pouco mais sobre a Apeperia</p>
+
+        <address class="institutional__address">
+          Rua Vergueiro, 3185 <br />
+          Mariana, São Paulo
+
+          <article class="institutional__contact">
+            <p>
+              <a
+                href="tel:+551155712751"
+                class="institutional__contact-telephone"
+                >(11) 5571-2751</a
+              >
+              ou
+              <a
+                href="mailto:contato@apeperia.com"
+                class="institutional__contact-email"
+                >contato@apeperia.com</a
+              >
+            </p>
+          </article>
+        </address>
+
+        <video
+          src="./assets/videos/java-training.mp4"
+          class="institutional__video"
+        ></video>
       </section>
     </main>
   </body>
