--- a/formacao_fornt_end/responsive-layout/apeperia/index.html
+++ b/formacao_fornt_end/responsive-layout/apeperia/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./assets/css/plans.css" />
     <link rel="stylesheet" href="./assets/css/contact.css" />
     <link rel="stylesheet" href="./assets/css/institutional.css" />
+    <link rel="stylesheet" href="./assets/css/footer.css" />
   </head>
 
   <body>
@@ -315,5 +316,52 @@
         ></video>
       </section>
     </main>
+
+    <footer class="footer container">
+      <img
+        src="./assets/images/svg/logo-apeperia.svg"
+        alt="Logo da Apeperia"
+        class="footer__image"
+      />
+
+      <ul class="footer__social-medias">
+        <li class="footer__social-media">
+          <img
+            src="./assets/images/social-networks/facebook.png"
+            alt="Ícone do Facebook"
+          />
+        </li>
+
+        <li class="footer__social-media">
+          <img
+            src="./assets/images/social-networks/twitter.png"
+            alt="Ícone do Twitter"
+          />
+        </li>
+
+        <li class="footer__social-media">
+          <img
+            src="./assets/images/social-networks/instagram.png"
+            alt="Ícone do Instagram"
+          />
+        </li>
+      </ul>
+
+      <nav class="footer__navigation">
+        <ul>
+          <li class="footer__link"><a href="#">Sobre</a></li>
+
+          <li class="footer__link"><a href="#">Planos</a></li>
+
+          <li class="footer__link"><a href="#">Blog</a></li>
+
+          <li class="footer__link"><a href="#">Destaques</a></li>
+
+          <li class="footer__link"><a href="#">Institucional</a></li>
+
+          <li class="footer__link"><a href="#">Contato</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
