:iphone: feat: create desktop layout

--- a/formacao_fornt_end/responsive-layout/apeperia/index.html
+++ b/formacao_fornt_end/responsive-layout/apeperia/index.html
@@ -146,7 +146,7 @@
           </p>
 
           <strong
-            class="about__content-description--highlight about__content-description--platform"
+            class="about__content-description--highlight about__content-description--platform about__content--divider"
           >
             Conte com uma equipe especializada e exclusiva pra projetos
             incríveis em qualquer plataforma.
@@ -287,65 +287,73 @@
       <section class="institutional container">
         <h2 class="title">Institucional</h2>
 
-        <p class="institutional__description">Um pouco mais sobre a Apeperia</p>
-
-        <address class="institutional__address">
-          Rua Vergueiro, 3185 <br />
-          Mariana, São Paulo
-
-          <article class="institutional__contact">
-            <p>
-              <a
-                href="tel:+551155712751"
-                class="institutional__contact-telephone"
-                >(11) 5571-2751</a
-              >
-              ou
-              <a
-                href="mailto:contato@apeperia.com"
-                class="institutional__contact-email"
-                >contato@apeperia.com</a
-              >
+        <div class="institutional__content">
+          <div class="institutional__info">
+            <p class="institutional__description">
+              Um pouco mais sobre a Apeperia
             </p>
-          </article>
-        </address>
 
-        <video
-          src="./assets/videos/java-training.mp4"
-          class="institutional__video"
-        ></video>
+            <address class="institutional__address">
+              Rua Vergueiro, 3185 <br />
+              Mariana, São Paulo
+
+              <article class="institutional__contact">
+                <p>
+                  <a
+                    href="tel:+551155712751"
+                    class="institutional__contact-telephone"
+                    >(11) 5571-2751</a
+                  >
+                  ou
+                  <a
+                    href="mailto:contato@apeperia.com"
+                    class="institutional__contact-email"
+                    >contato@apeperia.com</a
+                  >
+                </p>
+              </article>
+            </address>
+          </div>
+
+          <video
+            src="./assets/videos/java-training.mp4"
+            class="institutional__video"
+          ></video>
+        </div>
       </section>
     </main>
 
     <footer class="footer container">
-      <img
-        src="./assets/images/svg/logo-apeperia.svg"
-        alt="Logo da Apeperia"
-        class="footer__image"
-      />
+      <div class="footer__header">
+        <img
+          src="./assets/images/svg/logo-apeperia.svg"
+          alt="Logo da Apeperia"
+          class="footer__image"
+        />
 
-      <ul class="footer__social-medias">
-        <li class="footer__social-media">
-          <img
-            src="./assets/images/social-networks/facebook.png"
-            alt="Ícone do Facebook"
-          />
-        </li>
+        <ul class="footer__social-medias">
+          <li class="footer__social-media">
+            <img
+              src="./assets/images/social-networks/facebook.png"
+              alt="Ícone do Facebook"
+            />
+          </li>
 
-        <li class="footer__social-media">
-          <img
-            src="./assets/images/social-networks/twitter.png"
-            alt="Ícone do Twitter"
-          />
-        </li>
+          <li class="footer__social-media">
+            <img
+              src="./assets/images/social-networks/twitter.png"
+              alt="Ícone do Twitter"
+            />
+          </li>
 
-        <li class="footer__social-media">
-          <img
-            src="./assets/images/social-networks/instagram.png"
-            alt="Ícone do Instagram"
-          />
-        </li>
-      </ul>
+          <li class="footer__social-media">
+            <img
+              src="./assets/images/social-networks/instagram.png"
+              alt="Ícone do Instagram"
+            />
+          </li>
+        </ul>
+      </div>
 
       <nav class="footer__navigation">
         <ul>
