--- a/formacao_fornt_end/arquitetura-css/index.html
+++ b/formacao_fornt_end/arquitetura-css/index.html
@@ -14,6 +14,29 @@
 
     <link href="./assets/css/normalize.css" rel="stylesheet" />
     <link href="./assets/css/reset.css" rel="stylesheet" />
+    <link href="./assets/css/base.css" rel="stylesheet" />
+
+    <link href="./assets/css/header/header.css" rel="stylesheet" />
+    <link href="./assets/css/header/menu.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <header class="header container">
+      <nav class="nav__menu">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#" class="menu__link active">Início</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Receitas</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Quem somos</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Comunidade</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
