--- a/formacao_fornt_end/arquitetura-css/index.html
+++ b/formacao_fornt_end/arquitetura-css/index.html
@@ -18,10 +18,12 @@
 
     <link href="./assets/css/header/header.css" rel="stylesheet" />
     <link href="./assets/css/header/menu.css" rel="stylesheet" />
+
+    <link href="./assets/css/headline.css" rel="stylesheet" />
   </head>
   <body>
-    <header class="header container">
-      <nav class="nav__menu">
+    <header class="header">
+      <nav class="nav__menu container">
         <ul class="menu__list">
           <li class="menu__item">
             <a href="#" class="menu__link active">Início</a>
@@ -37,6 +39,10 @@
           </li>
         </ul>
       </nav>
+
+      <div class="headline">
+        <h1 class="headline__title">Reaproveite melhor os alimentos!</h1>
+      </div>
     </header>
   </body>
 </html>
