--- a/formacao_fornt_end/arquitetura-css/index.html
+++ b/formacao_fornt_end/arquitetura-css/index.html
@@ -23,22 +23,30 @@
   </head>
   <body>
     <header class="header">
-      <nav class="nav__menu container">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__link active">Início</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Receitas</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Quem somos</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Comunidade</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="header__content container">
+        <img
+          src="./assets/img/logo.jpg"
+          alt="Logo Fruta & Fruto"
+          class="header__logo"
+        />
+
+        <nav class="nav__menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link active">Início</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Receitas</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Quem somos</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Comunidade</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
 
       <div class="headline">
         <h1 class="headline__title">Reaproveite melhor os alimentos!</h1>
